# trading-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
6-buy-the-drip/: 1-drip-distribution.ipynb  2-month-and-drip.ipynb  3-year-and-drip.ipynb  4-price-change-after-drip.ipynb  4.2-price-recovery-decline.ipynb  5-RSI.ipynb  5.2-RSI-at-low.ipynb  5.3-RSI-at-low-5m.ipynb  5.4-RSI-at-low-1m.ipynb  5.5-RSI-5m.ipynb  5.6-RSI-4h.ipynb  6-volume.ipynb  7-drip-hour.ipynb  8-drip-frequency.ipynb  8.1-yearly-drip-frequency.ipynb  9-drip-image.ipynb
7-moonshot-analysis/: 1-defenition.ipynb  2-distribution.ipynb  2-v2-distribution.ipynb  2.1-distribution-5%,12hr.ipynb  3-starting.ipynb  4-peak.ipynb  5-price-change.ipynb  5.2-price-change-2020+.ipynb  6-ath.ipynb  7-cover.ipynb
8-drip-analysis/: 1-distribution.ipynb  2-month.ipynb  3-year.ipynb  4-starting.ipynb  5-bottom.ipynb  6-price-change.ipynb
dataset-processor/: create-from-1h.ipynb
