[tool.poetry]
name = "trading-analysis"
version = "0.1.0"
description = ""
authors = ["Sukrit Sunama <pong@witzh.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.9,<3.13"
jupyterlab = "^4.2.1"
notebook = "^7.2.0"
blinker = "^1.8.2"
python-slugify = "^8.0.4"
scikit-learn = "^1.5.0"
pythainlp = "^5.0.4"
joblib = "^1.4.2"
transformers = "^4.41.2"
ipywidgets = "^8.1.3"
torch = "^2.5.1"
datasets = "^2.19.2"
matplotlib = "^3.9.0"
tqdm = "^4.66.4"
yfinance = "^0.2.40"
pandas-ta = "^0.3.14b0"
vscode-tqdm = "^4.66.2"
numpy = "1.26"
bertopic = "^0.16.4"
seaborn = "^0.13.2"
pywavelets = "^1.8.0"
shap = "^0.47.1"
hmmlearn = "^0.3.3"
statsmodels = "^0.14.4"
optuna = "^4.3.0"
optuna-dashboard = "^0.18.0"
mplfinance = "^0.12.10b0"
peft = "^0.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
